--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.11",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.533.0",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
