--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "framer-motion": "^12.23.11",
     "gsap": "^3.13.0",
     "lucide-react": "^0.533.0",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-responsive": "^10.0.1",
     "three": "^0.178.0"
   },
   "devDependencies": {
